--- a/notebooks/chap1.ipynb
+++ b/notebooks/chap1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e023c2d",
+   "id": "122e6fb2",
    "metadata": {},
    "source": [
     "# Practical Statistics for Data Scientists (Python)\n",
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "860a0efa",
+   "execution_count": null,
+   "id": "41a89b67",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from scipy.stats import trim_mean\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6c3f25ee",
+   "execution_count": 11,
+   "id": "2ac76661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe36fa06",
+   "id": "3f7475af",
    "metadata": {},
    "source": [
     "# 1. Estimates of Location\n",
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ee31b17c",
+   "execution_count": 12,
+   "id": "79c8a56a",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4  California    37253956          4.4           CA"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,8 +163,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "94b16487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trim_mean(s,f):\n",
+    "    '''\n",
+    "    Return trimmed mean of serie\n",
+    "    Args:\n",
+    "        s: series\n",
+    "        f (float): trim value (0:1)\n",
+    "    Returns:\n",
+    "        mean: mean of trimmed series\n",
+    "    '''\n",
+    "    assert f >0, 'f value must be from 0-1'\n",
+    "    assert f <1, 'f value must be from 0-1'\n",
+    "    l = len(s)\n",
+    "    n = int(l*f)\n",
+    "    trimmed_s = s[n:-n]\n",
+    "    trimmed_mean = trimmed_s.mean()\n",
+    "    return trimmed_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "592ac3ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5831569.675"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trim_mean(state['Population'],f=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "19262d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean of population 6162876.3\n",
+      "trimmed mean population 5831569.675\n",
+      "median of population 4436369.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean of population\n",
+    "print('mean of population',state['Population'].mean())\n",
+    "\n",
+    "# trimmed mean of population\n",
+    "print('trimmed mean population',trim_mean(state['Population'],0.1))\n",
+    "\n",
+    "# median of population\n",
+    "print('median of population',state['Population'].median())"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "9b719e1c",
+   "id": "662dcdf9",
    "metadata": {},
    "source": [
     "# 2. Estimates of Variability"
@@ -173,14 +246,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "065cc483",
+   "id": "15f66a29",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "51c50492",
+   "id": "47242355",
    "metadata": {},
    "source": [
     "## Percentiles and Boxplots\n",
@@ -190,14 +263,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6877509d",
+   "id": "dcf11137",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b347bbb3",
+   "id": "d44701c9",
    "metadata": {},
    "source": [
     "## Frequency Table and Histograms\n",
@@ -207,14 +280,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4bf90ca",
+   "id": "00909174",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ee0692e4",
+   "id": "7cc54706",
    "metadata": {},
    "source": [
     "## Density Estimates\n",
@@ -224,14 +297,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b4c47f0",
+   "id": "966fbc70",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c8568a7a",
+   "id": "c21b94e1",
    "metadata": {},
    "source": [
     "# 3. Exploring Binary and Categorical Data"
@@ -240,14 +313,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da700b48",
+   "id": "8c4220d5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "941c48e8",
+   "id": "b38b28be",
    "metadata": {},
    "source": [
     "# 4. Correlation\n",
@@ -257,14 +330,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2525d14",
+   "id": "c49862fc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4a3e1e18",
+   "id": "fdc75c7e",
    "metadata": {},
    "source": [
     "## Scatterplots\n",
@@ -274,14 +347,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "747f5cf0",
+   "id": "1827738b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "2df2feb4",
+   "id": "045e401b",
    "metadata": {},
    "source": [
     "# 5. Exploring Two or More Variables\n",
@@ -291,14 +364,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a38c9cb",
+   "id": "0efda74a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1fcef598",
+   "id": "4af5cfda",
    "metadata": {},
    "source": [
     "## Hexagonal binning and Contours \n",
@@ -310,14 +383,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26858ef",
+   "id": "93eccab1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1cc3c349",
+   "id": "674eb313",
    "metadata": {},
    "source": [
     "## Two Categorical Variables\n",
@@ -327,14 +400,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74ede5ee",
+   "id": "386203da",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9d293085",
+   "id": "8fccf0c9",
    "metadata": {},
    "source": [
     "## Categorical and Numeric Data\n",
@@ -344,14 +417,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b8ee0d",
+   "id": "a5fe5334",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3e9a7513",
+   "id": "3a2edaaf",
    "metadata": {},
    "source": [
     "## Visualizing Multiple Variables"
@@ -360,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5730aae",
+   "id": "429ff394",
    "metadata": {},
    "outputs": [],
    "source": []
