--- a/nlp/torch-examples.ipynb
+++ b/nlp/torch-examples.ipynb
@@ -718,6 +718,49 @@
     "softmax_output = F.softmax(tensor1,dim=0)\n",
     "softmax_output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "0992b165-e990-4832-866e-77270ff818b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 100])\n",
+      "tensor(-2.4791, grad_fn=<MinBackward1>)\n",
+      "tensor(3.0445, grad_fn=<MaxBackward1>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize an embedding layer\n",
+    "vocab_size = 1000\n",
+    "embedding_dim = 100\n",
+    "embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "# Create some input indice\n",
+    "input_indices = torch.LongTensor([1, 5, 3, 2])\n",
+    "\n",
+    "# Apply the embedding layer\n",
+    "embedded_ouput = embedding(input_indices)\n",
+    "\n",
+    "# The output will be the tensor of shape (4, 100) where 4 is the number of inputs\n",
+    "# and 100 is the dimensionality of the embedding vectors\n",
+    "print(embedded_ouput.shape)\n",
+    "print(embedded_ouput.min())\n",
+    "print(embedded_ouput.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3b2935c-9d31-4d8f-9412-6d79f3f537ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
