--- a/nlp/torch-examples.ipynb
+++ b/nlp/torch-examples.ipynb
@@ -756,8 +756,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
+   "id": "2ef87fcd-b8e2-4c55-8995-1869f20dfe2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 27,  30,  33],\n",
+      "        [ 61,  68,  75],\n",
+      "        [ 95, 106, 117]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 27,  30,  33],\n",
+       "        [ 61,  68,  75],\n",
+       "        [ 95, 106, 117]])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix multiplication\n",
+    "a = torch.tensor([[1,2],[3,4],[5,6]])\n",
+    "b = torch.tensor([[7,8,9],[10,11,12]])\n",
+    "print(a @ b)\n",
+    "torch.matmul(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "id": "d3b2935c-9d31-4d8f-9412-6d79f3f537ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 0.],\n",
+      "        [0., 0.],\n",
+      "        [0., 0.]])\n",
+      "tensor([[ 1.1154, -0.7466,  1.6270],\n",
+      "        [-1.3531,  0.7901,  0.1917]])\n",
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can not multiply different type of matrix\n",
+    "# type int64\n",
+    "int_64 = torch.randint(1,(3,2)).float()\n",
+    "print(int_64)\n",
+    "# type float32\n",
+    "float_32 = torch.randn(2,3)\n",
+    "print(float_32)\n",
+    "result = torch.matmul(int_64, float_32)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "18cb5278-dc2b-4e3d-a5cc-d9404a2ef7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.2117, 0.2700, 0.4030, 0.3480, 0.8413],\n",
+      "         [0.1672, 0.5834, 0.8648, 0.3556, 0.1199],\n",
+      "         [0.5976, 0.6727, 0.5835, 0.6881, 0.9361]],\n",
+      "\n",
+      "        [[0.2027, 0.9321, 0.1164, 0.1009, 0.6062],\n",
+      "         [0.8965, 0.9000, 0.7050, 0.4458, 0.9000],\n",
+      "         [0.5671, 0.7836, 0.2019, 0.7970, 0.2170]]])\n",
+      "torch.Size([2, 3, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.rand(2,3,5)\n",
+    "print(a)\n",
+    "x,y,z = a.shape\n",
+    "a = a.view(x,y,z)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "ba91cb41-2f1e-4f1a-8de4-5b5ad8543658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.2117, 0.2700, 0.4030, 0.3480, 0.8413],\n",
+       "         [0.1672, 0.5834, 0.8648, 0.3556, 0.1199],\n",
+       "         [0.5976, 0.6727, 0.5835, 0.6881, 0.9361]],\n",
+       "\n",
+       "        [[0.2027, 0.9321, 0.1164, 0.1009, 0.6062],\n",
+       "         [0.8965, 0.9000, 0.7050, 0.4458, 0.9000],\n",
+       "         [0.5671, 0.7836, 0.2019, 0.7970, 0.2170]]])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033a0588-8906-4042-9d7f-a09ac94a7761",
    "metadata": {},
    "outputs": [],
    "source": []
