--- a/nlp/bigram.ipynb
+++ b/nlp/bigram.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 244,
    "id": "55c167b7-a1c0-4d4d-80a8-04cc64dbae4b",
    "metadata": {},
    "outputs": [
@@ -343,17 +343,22 @@
       "context:  tensor([[0]], device='cuda:0')\n",
       "\n",
       "\n",
+      "\"Yerekel Pe sale thed lorerdre t therie s fu, TE tr adeianghe hty \"Winad\n",
+      "\"Sollome.\n",
       "\n",
-      "he ordeyrn Jathy w kacthed  nod Zest aronghe ythtobo ssthe,\n",
+      "contowanean t patrso, g tth?\"\n",
+      "eyrintecid arod t h tucadrevep sthe otthat by holld alat wand ly tartar\n",
+      "wot, and dir,\"\n",
       "\n",
-      "ANooounibrthamanin id with e; theruthen'lllle wengoeme  cken tele san.\"The ize, ton heg s; tave sthan p, gheras Ozm geryo, me ld ed eyothind fllep Wid ws y m.\n",
+      "ald t foutanaie ir ngat, s te \" m\n",
       "\n",
-      "h. pour t \" lf tid areope mplond  shed themare moomf we t,\"He; aleain\n",
-      "thand  ter dean t unsad fo.\n",
-      "f awamid tand ast s.\" othedimininck jund henghea\n",
-      "\" a atured ims d th \"Pres widene pr s\n",
-      "I Siesere aisw o'safole Cat caledengheisitheleed.\"May, kero te proumiris wowachy licod bes\n",
-      "C\n"
+      "Thed f ed ayoo at m, ithed\n",
+      "geracand\n",
+      "d yagoula we pan uryore thu bun_, s harest t o uglitfofloupa \"\n",
+      "an, asapr'tow he, as. de ale sasino s thigastan  VI f arsise aizato tise  POOYerirud. ange th  k:\n",
+      "wld oy ne nttun intr there,\n",
+      "nd Itthet\n",
+      "sor st y thincs aroshnqu hi\n"
      ]
     }
    ],
